--- a/Hi_Opencv/Hi_Opencv/Hi_Opencv.ui
+++ b/Hi_Opencv/Hi_Opencv/Hi_Opencv.ui
@@ -1391,7 +1391,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>150</y>
+        <y>180</y>
         <width>91</width>
         <height>23</height>
        </rect>
@@ -1410,7 +1410,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>210</y>
+        <y>230</y>
         <width>91</width>
         <height>23</height>
        </rect>
@@ -1423,25 +1423,6 @@
       </property>
       <property name="text">
        <string>霍夫线变换</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="pushButton_blur_6">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>270</y>
-        <width>91</width>
-        <height>23</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>楷体</family>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>寻找轮廓</string>
       </property>
      </widget>
      <widget class="QPushButton" name="pushButton_blur_7">
@@ -1462,52 +1443,6 @@
       <property name="text">
        <string>轮廓矩</string>
       </property>
-     </widget>
-     <widget class="QScrollArea" name="scrollArea_open31">
-      <property name="geometry">
-       <rect>
-        <x>110</x>
-        <y>30</y>
-        <width>351</width>
-        <height>321</height>
-       </rect>
-      </property>
-      <property name="widgetResizable">
-       <bool>true</bool>
-      </property>
-      <widget class="QWidget" name="scrollAreaWidgetContents">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>349</width>
-         <height>319</height>
-        </rect>
-       </property>
-      </widget>
-     </widget>
-     <widget class="QScrollArea" name="scrollArea_open32">
-      <property name="geometry">
-       <rect>
-        <x>470</x>
-        <y>30</y>
-        <width>351</width>
-        <height>321</height>
-       </rect>
-      </property>
-      <property name="widgetResizable">
-       <bool>true</bool>
-      </property>
-      <widget class="QWidget" name="scrollAreaWidgetContents_2">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>349</width>
-         <height>319</height>
-        </rect>
-       </property>
-      </widget>
      </widget>
      <widget class="QPushButton" name="pushButton_open_2">
       <property name="geometry">
@@ -1587,7 +1522,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>40</y>
+        <y>80</y>
         <width>91</width>
         <height>23</height>
        </rect>
@@ -1600,7 +1535,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>90</y>
+        <y>130</y>
         <width>91</width>
         <height>23</height>
        </rect>
@@ -1608,6 +1543,135 @@
       <property name="text">
        <string>Laplace</string>
       </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_blur_8">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>280</y>
+        <width>91</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>楷体</family>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>霍夫圆变换</string>
+      </property>
+     </widget>
+     <widget class="QWidget" name="layoutWidget_15">
+      <property name="geometry">
+       <rect>
+        <x>450</x>
+        <y>20</y>
+        <width>301</width>
+        <height>381</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_20">
+       <item>
+        <widget class="QLabel" name="label_16">
+         <property name="maximumSize">
+          <size>
+           <width>50</width>
+           <height>20</height>
+          </size>
+         </property>
+         <property name="font">
+          <font>
+           <family>Times New Roman</family>
+           <pointsize>12</pointsize>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>output</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_out_4">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="scaledContents">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="layoutWidget_16">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>20</y>
+        <width>301</width>
+        <height>381</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_21">
+       <item>
+        <widget class="QLabel" name="label_17">
+         <property name="maximumSize">
+          <size>
+           <width>50</width>
+           <height>20</height>
+          </size>
+         </property>
+         <property name="font">
+          <font>
+           <family>Times New Roman</family>
+           <pointsize>12</pointsize>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>input</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_in_4">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="scaledContents">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_6">
@@ -3315,30 +3379,14 @@
    </hints>
   </connection>
   <connection>
-   <sender>pushButton_blur_6</sender>
-   <signal>clicked()</signal>
-   <receiver>Hi_OpencvClass</receiver>
-   <slot>on_findContours_show()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>60</x>
-     <y>318</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>41</x>
-     <y>-13</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
    <sender>pushButton_blur_7</sender>
    <signal>clicked()</signal>
    <receiver>Hi_OpencvClass</receiver>
    <slot>on_findContoursLength_show()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>37</x>
-     <y>367</y>
+     <x>39</x>
+     <y>415</y>
     </hint>
     <hint type="destinationlabel">
      <x>51</x>
@@ -3410,6 +3458,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>pushButton_blur_8</sender>
+   <signal>clicked()</signal>
+   <receiver>Hi_OpencvClass</receiver>
+   <slot>on_HoughCircle_show()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>78</x>
+     <y>295</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>413</x>
+     <y>566</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>on_open()</slot>
@@ -3466,5 +3530,6 @@
   <slot>on_laplace_show()</slot>
   <slot>on_byopen()</slot>
   <slot>on_bystart()</slot>
+  <slot>on_HoughCircle_show()</slot>
  </slots>
 </ui>
