--- a/Hi_Opencv/Hi_Opencv/Hi_Opencv.ui
+++ b/Hi_Opencv/Hi_Opencv/Hi_Opencv.ui
@@ -30,7 +30,7 @@
      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;dede&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="currentIndex">
-     <number>7</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -221,7 +221,7 @@
        <rect>
         <x>810</x>
         <y>10</y>
-        <width>197</width>
+        <width>237</width>
         <height>381</height>
        </rect>
       </property>
@@ -284,7 +284,7 @@
           </font>
          </property>
          <property name="text">
-          <string>图像模糊</string>
+          <string>image degradation</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -331,7 +331,7 @@
             </font>
            </property>
            <property name="text">
-            <string>像素宽度w：</string>
+            <string>image width:</string>
            </property>
           </widget>
          </item>
@@ -393,7 +393,7 @@
             </font>
            </property>
            <property name="text">
-            <string>像素高度h：</string>
+            <string>image hight:</string>
            </property>
           </widget>
          </item>
@@ -430,52 +430,6 @@
           </size>
          </property>
         </spacer>
-       </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_5">
-         <item>
-          <spacer name="horizontalSpacer_5">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
-          <widget class="QLabel" name="label_i">
-           <property name="font">
-            <font>
-             <family>楷体</family>
-             <pointsize>12</pointsize>
-            </font>
-           </property>
-           <property name="text">
-            <string>内核大小：</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLineEdit" name="lineEdit_i"/>
-         </item>
-         <item>
-          <spacer name="horizontalSpacer_6">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-        </layout>
        </item>
       </layout>
      </widget>
@@ -2208,6 +2162,9 @@
       </property>
      </widget>
      <widget class="QPushButton" name="pushButton_start_5">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="geometry">
        <rect>
         <x>950</x>
@@ -2608,7 +2565,7 @@
       <property name="geometry">
        <rect>
         <x>780</x>
-        <y>60</y>
+        <y>110</y>
         <width>281</width>
         <height>107</height>
        </rect>
@@ -2680,7 +2637,7 @@
       <property name="geometry">
        <rect>
         <x>790</x>
-        <y>190</y>
+        <y>230</y>
         <width>261</width>
         <height>101</height>
        </rect>
@@ -2906,6 +2863,30 @@
         </spacer>
        </item>
       </layout>
+     </widget>
+     <widget class="QLabel" name="label_20">
+      <property name="geometry">
+       <rect>
+        <x>780</x>
+        <y>60</y>
+        <width>281</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>SimSun-ExtB</family>
+        <pointsize>18</pointsize>
+        <weight>50</weight>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Other</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
      </widget>
     </widget>
    </widget>
